--- a/assets/sass/globals/variables.scss
+++ b/assets/sass/globals/variables.scss
@@ -45,6 +45,19 @@ $bp--xl : 1200;
 $font-standard: 'ProximaNova', sans-serif;
 $font-heading : 'ArgentCF', sans-serif;
 $font-emph    : 'Realtime', sans-serif;
+$font-icons   : 'KyrioIcons';
+
+// **
+// ICONS
+// *
+$icon-cart: "\e900";
+$icon-find: "\e901";
+$icon-select: "\e902";
+$icon-setup: "\e903";
+$icon-verify: "\e904";
+$icon-schedule: "\e905";
+$icon-customize: "\e906";
+$icon-calendar: "\e907";
 
 // **
 // SPEC CHARS
