Add Affiliates styling, template, and media

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -34,3 +34,6 @@
 @import 'components/grid';
 @import 'components/media';
 @import 'components/interaction';
+@import 'components/process-list';
+@import 'components/pikaday';
+@import 'components/icons';
