--- a/assets/sass/globals/font-face.scss
+++ b/assets/sass/globals/font-face.scss
@@ -15,6 +15,15 @@ $fontDir: "../fonts";
 }
 
 @font-face {
+    font-family: 'ProximaNova';
+    src: url('#{$fontDir}/proximanova/proximanova-bold.woff2') format('woff2'),
+         url('#{$fontDir}/proximanova/proximanova-bold.woff') format('woff'),
+         url('#{$fontDir}/proximanova/proximanova-bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'ArgentCF';
     src: url('#{$fontDir}/argentcf/argentcf-thinitalic.woff2') format('woff2'),
          url('#{$fontDir}/argentcf/argentcf-thinitalic.woff') format('woff'),
@@ -38,5 +47,22 @@ $fontDir: "../fonts";
          url('#{$fontDir}/realtime/realtime-bold.woff') format('woff'),
          url('#{$fontDir}/realtime/realtime-bold.ttf') format('truetype');
     font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Realtime';
+    src: url('#{$fontDir}/realtime/realtime-bold.woff2') format('woff2'),
+         url('#{$fontDir}/realtime/realtime-bold.woff') format('woff'),
+         url('#{$fontDir}/realtime/realtime-bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'KyrioIcons';
+    src: url('#{$fontDir}/icons/icons.woff') format('woff'),
+         url('#{$fontDir}/icons/icons.ttf') format('truetype');
+    font-weight: 400;
     font-style: normal;
 }
