--- a/assets/sass/globals/variables.scss
+++ b/assets/sass/globals/variables.scss
@@ -17,7 +17,10 @@ $base-lineheight   : 1.2;
 // COLORS
 // *
 $color-dark       : #0C0C0C;
+$color-semi-dark  : lighten($color-dark, 10%);
 $color-med        : #a5a4a3;
+$color-med-light  : lighten(#a5a4a3, 22%);
+$color-semi-light : #ECECEC;
 $color-light      : #F2F2F2;
 $color-white      : #FFFFFF;
 $color-black      : #000000;
