--- a/assets/sass/components/content.scss
+++ b/assets/sass/components/content.scss
@@ -2,31 +2,31 @@
 // Content //
 /////////////
 
-.page__section--form {
-    
+.page__footer {
+
     .form {
         @include bp--l {
             padding-bottom: 8.7rem;
         }
     }
-    
+
     .section__footer,
     .section__footer a {
         color: white;
     }
-    
+
     .section__footer {
         color: white;
-        
+
         p {
             display: block;
             margin-bottom: 0.3rem;
-            
+
             @include bp--m {
                 margin-bottom: 0.9rem;
             }
         }
-        
+
         .footer__brand {
             max-width: 13.6rem;
             margin-bottom: 3.0rem;
@@ -35,7 +35,7 @@
                 margin-bottom: 4.2rem;
             }
         }
-        
+
         @include bp--xl {
             @include max-width(true);
             margin-left: auto;
