--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -6,36 +6,144 @@
     &--main {
         padding-top: 2.4rem;
         padding-bottom: 3.0rem;
-        
+
         @include bp--m {
             padding-top: 3.6rem;
             padding-bottom: 4.8rem;
         }
-        
+
         @include bp--xl {
             padding-top: 7.2rem;
             padding-bottom: 12.4rem;
         }
-        
+
         .nav__brand {
             text-align: right;
             color: $color-white;
             max-width: 17.2rem;
-            
+
             @include bp--m {
                 max-width: 31.2rem;
             }
-            
+
             p {
                 font-size: 0.9rem;
                 padding-right: 0.9rem;
                 margin-top: 0.2rem;
-                
+
                 @include bp--l {
                     font-size: 1.4rem;
                     margin-top: 0.3rem;
                     padding-right: 1.8rem;
                 }
+            }
+        }
+    }
+}
+
+.nav--page {
+    background: $color-blue;
+    position: relative;
+
+    .nav__container {
+        width: 100%;
+        position: relative;
+
+        @include bp--m {
+            display: table;
+            padding-right: 6rem;
+
+            .nav__brand,
+            .process-list {
+                display: table-cell;
+                vertical-align: middle;
+            }
+        }
+
+        @include bp--xl {
+            max-width: 128.4rem;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    .nav__brand {
+        padding: 1.2rem 1.8rem;
+
+        @include bp--m {
+            padding: 0;
+            width: 36%;
+        }
+
+        @include bp--l {
+            width: 38%;
+        }
+
+        &-inner {
+            max-width: 20.4rem;
+            display: block;
+
+            @include bp--m {
+                max-width: 17.4rem;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            @include bp(900) {
+                max-width: 21.2rem;
+            }
+
+            @include bp--xl {
+                max-width: 31.2rem;
+            }
+        }
+
+        p {
+            font-size: 8px;
+            padding-right: 0.8rem;
+            margin-top: 0.2rem;
+            color: $color-white;
+            text-align: right;
+
+            @include bp--l {
+                font-size: 1.4rem;
+                margin-top: 0.3rem;
+                padding-right: 1.8rem;
+            }
+        }
+    }
+
+    .nav__cart {
+        position: absolute;
+        background: darken($color-blue, 5%);
+        padding: 0.9rem;
+        top: 1.2rem;
+        right: 1.2rem;
+        color: $color-orange;
+        font-size: 1.6rem;
+        height: 3.4rem;
+
+        @include bp--m {
+            top: 50%;
+            right: 2.4rem;
+            transform: translateY(-50%);
+        }
+
+        @include bp--l {
+            padding: 1.2rem;
+            font-size: 2.0rem;
+            height: 4.4rem;
+        }
+
+        img {
+            max-width: 1.8rem;
+
+            @include bp(1100) {
+                max-width: 2.8rem;
+            }
+
+            @include bp--xl {
+                max-width: 3.8rem;
             }
         }
     }
