--- a/assets/sass/components/overlay.scss
+++ b/assets/sass/components/overlay.scss
@@ -7,7 +7,7 @@
     background-position: center center;
     position: relative;
     overflow: hidden;
-    
+
     &.page__header:after {
         content: '';
         position: absolute;
@@ -17,6 +17,10 @@
         bottom: 0;
         z-index: -2;
         background: $color-blue;
+    }
+
+    &--light {
+        background: $color-light;
     }
 }
 
