--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -85,12 +85,15 @@
 
             @include bp--m {
                 max-width: 17.4rem;
-                margin-left: auto;
-                margin-right: auto;
+                margin-left: 2.4rem;
             }
 
             @include bp(900) {
                 max-width: 21.2rem;
+            }
+
+            @include bp--l {
+                margin-left: 3.6rem;
             }
 
             @include bp--xl {
