--- a/assets/templates/pages/affiliates/index.html
+++ b/assets/templates/pages/affiliates/index.html
@@ -1,4 +1,5 @@
 {% set asset_location = "../" %}
+{% set page = "inner" %}
 {% extends "layout.nunjucks" %}
 {% import "_macros/provider-grid.nunjucks" as providerGrid %}
 
