--- a/assets/templates/pages/index.html
+++ b/assets/templates/pages/index.html
@@ -1,4 +1,5 @@
 {% set asset_location = "" %}
+{% set page = "main" %}
 {% extends "layout.nunjucks" %}
 {% import "_macros/provider-grid.nunjucks" as providerGrid %}
 
